src/components/BlockDetail.css
.BlockDetail {
  position: absolute;
  transition: var(--ease-out-transition);
  transition-property: left, top;
  z-index: 10;
  pointer-events: none;
}

.BlockDetail-linking:focus-within,
.BlockDetail-linking:hover {
  z-index: 20;
}

.BlockDetail-card {
  min-width: 288px;
  margin: 12px;
  box-shadow: var(--depth-1-shadow) !important;
  pointer-events: auto;
}

.BlockDetail:focus-within .BlockDetail-card {
  box-shadow: var(--depth-3-shadow) !important;
}

.BlockDetail:focus-within.BlockDetail-linking .BlockDetail-card,
.BlockDetail-linking:hover .BlockDetail-card {
  box-shadow: 0 0 0 4px var(--primary1-color) !important;
}

.BlockDetail-card > div {
  display: flex;
}

.BlockDetail-title {
  flex: 1;
}

.BlockDetail-actions {
  display: flex;
  flex-direction: column;
  transition: var(--ease-out-transition);
  padding: 0 4px 0 0 !important;
  opacity: 0;
}

.BlockDetail:hover:not(.BlockDetail-linking) .BlockDetail-actions {
  opacity: 1;
}

.BlockDetail-actions > * {
  margin: 4px 0 !important;
}

.BlockDetail-actions button {
  width: 34px !important;
  height: 34px !important;
  padding: 0 !important;
}

.BlockDetail-actions svg {
  color: var(--secondary-text-color) !important;
}

.BlockDetail-actions > :hover svg {
  color: var(--text-color) !important;
}

.BlockDetail-addLink {
  cursor: crosshair !important;
}

